--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@ body {
   height: 100%;
 }
 
+.height100 {
+  height: 100%;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
