Set up the head portrait

--- a/src/components/main_menu.css
+++ b/src/components/main_menu.css
@@ -1,2 +1,9 @@
-.main-menu {
+.head-portrait {
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+}
+
+.main-menu-nav {
+  text-align: center;
 }
