--- a/src/components/main_menu.css
+++ b/src/components/main_menu.css
@@ -2,8 +2,10 @@
   height: 200px;
   width: 200px;
   border-radius: 50%;
+  margin-bottom: 40px;
 }
 
 .main-menu-nav {
+  margin: 40px 0;
   text-align: center;
 }
