content for 'about me' page

--- a/src/components/about_me.css
+++ b/src/components/about_me.css
@@ -1,3 +1,11 @@
 .about-me {
   width: 80%;
 }
+
+.about-me__section--education {
+  margin: 40px 0;
+}
+
+.about-me__section--persion-pages {
+  margin: 40px 0;
+}
