Optimize the layout for mobile

--- a/src/components/download_resume.css
+++ b/src/components/download_resume.css
@@ -8,3 +8,10 @@
   width: auto;
   margin-bottom: 30px;
 }
+
+@media (max-width: 700px) {
+  .download-resume__img--resume-png {
+    width: 80%;
+    height: auto;
+  }
+}
