--- a/src/components/work_experiences.css
+++ b/src/components/work_experiences.css
@@ -12,3 +12,9 @@
   border-radius: 10px;
   box-shadow: 2px 5px 5px #e2dddd;
 }
+
+@media (max-width: 700px) {
+  .work-experiences {
+    width: 90%;
+  }
+}
