--- a/src/components/mainMenu/mainMenu.css
+++ b/src/components/mainMenu/mainMenu.css
@@ -10,6 +10,10 @@
   text-align: center;
 }
 
+.main-menu-nav .btn {
+  width: 150px;
+}
+
 .disclaimer {
   font-size: 12px;
   text-align: center;
