--- a/src/components/footerNav/footerNav.css
+++ b/src/components/footerNav/footerNav.css
@@ -1,10 +1,16 @@
 #mobile-footer-nav {
-  background-color: #e9ecef;
+  background-color: #17a2b8;
   position: fixed;
   bottom: 0;
 }
+
 #mobile-footer-nav .nav-link {
   padding-left: 5px;
   padding-right: 5px;
   text-align: center;
+  color: white;
+}
+
+#mobile-footer-nav .col {
+  padding: 0;
 }
