--- a/src/components/workExperiences/workExperiences.css
+++ b/src/components/workExperiences/workExperiences.css
@@ -1,16 +1,9 @@
-.work-experiences {
-  padding: 10px;
-  width: 80%;
-  height: 90%;
-  overflow-y: scroll;
-  overflow-x: hidden;
-}
-
 .work-experiences__section {
-  margin: 40px 0;
+  margin: 20px 40px;
   padding: 5px 10px;
   border-radius: 10px;
   box-shadow: 2px 5px 5px #e2dddd;
+  background-color: #e6e0e02e;
 }
 
 @media (max-width: 700px) {
