--- a/src/components/workExperiences/workExperiences.css
+++ b/src/components/workExperiences/workExperiences.css
@@ -1,6 +1,6 @@
 .work-experiences__section {
   margin: 20px 40px;
-  padding: 5px 10px;
+  padding: 15px;
   border-radius: 10px;
   box-shadow: 2px 5px 5px #e2dddd;
   background-color: #e6e0e02e;
