--- a/src/components/mainMenu/mainMenu.css
+++ b/src/components/mainMenu/mainMenu.css
@@ -19,3 +19,13 @@
   text-align: center;
   font-style: italic;
 }
+
+@media screen and (max-width: 768px) {
+  .head-portrait {
+    height: 150px;
+    width: 150px;
+  }
+  .main-menu-nav {
+    margin: 20px 0;
+  }
+}
